--- a/src/main/resources/templates/mascotas.html
+++ b/src/main/resources/templates/mascotas.html
@@ -74,6 +74,7 @@
                                                                                     <td>
                                                                                         <a th:href="@{/mascota/editar-perfil(id=__${mascota.id}__,accion=Actualizar)}">Editar</a>-
                                                                                         <a th:href="@{/mascota/editar-perfil(id=__${mascota.id}__,accion=Eliminar)}">Eliminar</a>
+                                                                                        <a th:href="@{/mascota/eleccion (idMascota1=__${mascota.id}__)}">Votar</a>
                                                                                     </td>
                                                                                     </tr>
                                                                                     </tbody>
